--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     width: 100%;
     height: 100%;
-    margin: 30px;
+    margin: 0px;
     padding: 0px;
     background-color: antiquewhite;
     font-family: Arial, Helvetica, sans-serif;
@@ -9,6 +9,7 @@ body {
 
 #profile-container {
     max-width: 300px;
+    margin: 80px auto;
     background-color: white;
     border: 1px solid gray;
     border-radius: 6px;
