--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 #profile-container {
     max-width: 300px;
-    margin: 80px auto;
+    margin: 30px auto;
     background-color: white;
     border: 1px solid gray;
     border-radius: 6px;
@@ -43,4 +43,8 @@ body {
     background-color: burlywood;
     text-align: center;
     color: white;
+}
+
+#profile-job {
+    text-align: center;
 }
